--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.a_url,a:not([href]){
+  font-size: 12px;
+  color: rgb(127, 176, 255);
+  cursor: pointer;
+}
+.a_url:hover,a:not([href]):hover{
+  color: rgb(127, 176, 255);
+  text-decoration: underline;
+}
+.fileItem{
+  border:0.5px solid rgb(214, 214, 214);
+  margin: 2px;
+}
